// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Component Edit mode matches the snapshot 1`] = `
<div
  class="card p-3 mb-4"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    class="container"
  >
    <!---->
     
    <div
      class="row border-bottom mb-3 pb-2"
    >
      <div
        class="col"
      >
        <h4>
          Aquifer 4 Summary - Edit
        </h4>
      </div>
    </div>
     
    <!---->
     
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-md-6"
        >
          <div
            class="row"
          >
            <div
              class="aquifer-id col-form-label col-md-4"
            >
              
          Aquifer number
        
            </div>
             
            <div
              class="aquifer-id col-md-8"
            >
              
          4
        
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__52__BV_label_"
            class="b-form-group form-group"
            id="__BVID__52"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="aquifer_name"
                id="__BVID__52__BV_label_"
              >
                Aquifer name
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-name"
                  tabindex="1"
                  type="text"
                  value="Aggasiz"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__54__BV_label_"
            class="b-form-group form-group"
            id="__BVID__54"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="location_description"
                id="__BVID__54__BV_label_"
              >
                Descriptive location
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-location-description"
                  tabindex="3"
                  type="text"
                  value="Aggasiz/Sea Bird Island"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__56__BV_label_"
            class="b-form-group form-group"
            id="__BVID__56"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="material"
                id="__BVID__56__BV_label_"
              >
                Material type
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-material"
                  tabindex="5"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__58__BV_label_"
            class="b-form-group form-group"
            id="__BVID__58"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="quality_concern"
                id="__BVID__58__BV_label_"
              >
                Quality concerns
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-quality-concern"
                  tabindex="7"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__60__BV_label_"
            class="b-form-group form-group"
            id="__BVID__60"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="area"
                id="__BVID__60__BV_label_"
              >
                Size (km²)
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-area"
                  tabindex="9"
                  type="text"
                  value="63.3"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__62__BV_label_"
            class="b-form-group form-group"
            id="__BVID__62"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="known_water_use"
                id="__BVID__62__BV_label_"
              >
                Type of known water use
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-known-water-use"
                  tabindex="11"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__64__BV_label_"
            class="b-form-group form-group"
            id="__BVID__64"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="notes"
                id="__BVID__64__BV_label_"
              >
                Comments
              </label>
              <div
                class="col-sm-8"
              >
                <textarea
                  class="form-control"
                  id="aquifer-notes"
                  rows="4"
                  tabindex="13"
                  wrap="soft"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <fieldset
            aria-labelledby="__BVID__66__BV_label_"
            class="b-form-group form-group"
            id="__BVID__66"
            role="group"
          >
            <div
              class="form-row"
            >
              <legend
                class="col-sm-4 col-form-label"
                id="__BVID__66__BV_label_"
              >
                Documents
              </legend>
              <div
                aria-labelledby="__BVID__66__BV_label_"
                class="col-sm-8"
                role="group"
              >
                <input
                  class="form-control-file"
                  id="__BVID__67"
                  multiple="multiple"
                  type="file"
                />
                 
                <div
                  class="mt-3"
                >
                  <div
                    class="custom-control custom-checkbox custom-control-inline"
                  >
                    <input
                      autocomplete="off"
                      class="custom-control-input"
                      id="isPrivateCheckbox"
                      true-value="true"
                      type="checkbox"
                      value="true"
                    />
                    <label
                      class="custom-control-label"
                      for="isPrivateCheckbox"
                    >
                      Are these documents private?
                    </label>
                  </div>
                </div>
                 
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </fieldset>
        </div>
         
        <div
          class="col-md-6"
        >
          <div
            aria-labelledby="__BVID__69__BV_label_"
            class="b-form-group form-group"
            id="__BVID__69"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="mapping_year"
                id="__BVID__69__BV_label_"
              >
                Year of mapping
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-mapping-year"
                  tabindex="2"
                  type="text"
                  value="1993"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__71__BV_label_"
            class="b-form-group form-group"
            id="__BVID__71"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="litho_stratographic_unit"
                id="__BVID__71__BV_label_"
              >
                Litho stratigraphic unit
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-litho-stratigraphic-unit"
                  tabindex="4"
                  type="text"
                  value="Fraser River Sediments"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__73__BV_label_"
            class="b-form-group form-group"
            id="__BVID__73"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="vulnerability"
                id="__BVID__73__BV_label_"
              >
                Vulnerability
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-vulnerability"
                  tabindex="6"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__75__BV_label_"
            class="b-form-group form-group"
            id="__BVID__75"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="subtype"
                id="__BVID__75__BV_label_"
              >
                Subtype
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-subtype"
                  tabindex="8"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__77__BV_label_"
            class="b-form-group form-group"
            id="__BVID__77"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="productivity"
                id="__BVID__77__BV_label_"
              >
                Productivity
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-productivity"
                  tabindex="10"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__79__BV_label_"
            class="b-form-group form-group"
            id="__BVID__79"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="demand"
                id="__BVID__79__BV_label_"
              >
                Demand
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-demand"
                  tabindex="12"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="row mt-4"
      >
        <div
          class="col-auto"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            
        Save
      
          </button>
           
          <button
            class="btn btn-default"
            type="button"
          >
            
        Cancel
      
          </button>
        </div>
      </div>
       
      <div>
        <div
          id="confirmSave___BV_modal_outer_"
        >
          <div
            aria-hidden="true"
            class="modal fade"
            id="confirmSave"
            role="dialog"
            style="display: none;"
          >
            <div
              class="modal-dialog modal-md"
            >
              <div
                aria-describedby="confirmSave___BV_modal_body_"
                aria-labelledby="confirmSave___BV_modal_header_"
                class="modal-content"
                role="document"
                tabindex="-1"
              >
                <header
                  class="modal-header"
                  id="confirmSave___BV_modal_header_"
                >
                  <h5
                    class="modal-title"
                  />
                  <button
                    aria-label="Close"
                    class="close"
                    type="button"
                  >
                    ×
                  </button>
                </header>
                <div
                  class="modal-body"
                  id="confirmSave___BV_modal_body_"
                >
                  <p>
                    Are you sure you would like to save this record?
                  </p>
                </div>
                <footer
                  class="modal-footer"
                  id="confirmSave___BV_modal_footer_"
                >
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    OK
                  </button>
                </footer>
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
       
      <div>
        <div
          id="confirmCancel___BV_modal_outer_"
        >
          <div
            aria-hidden="true"
            class="modal fade"
            id="confirmCancel"
            role="dialog"
            style="display: none;"
          >
            <div
              class="modal-dialog modal-md"
            >
              <div
                aria-describedby="confirmCancel___BV_modal_body_"
                aria-labelledby="confirmCancel___BV_modal_header_"
                class="modal-content"
                role="document"
                tabindex="-1"
              >
                <header
                  class="modal-header"
                  id="confirmCancel___BV_modal_header_"
                >
                  <h5
                    class="modal-title"
                  />
                  <button
                    aria-label="Close"
                    class="close"
                    type="button"
                  >
                    ×
                  </button>
                </header>
                <div
                  class="modal-body"
                  id="confirmCancel___BV_modal_body_"
                >
                  <p>
                    Are you sure you want to quit editing this record?
                  </p>
                </div>
                <footer
                  class="modal-footer"
                  id="confirmCancel___BV_modal_footer_"
                >
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    OK
                  </button>
                </footer>
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
     
    <h5
      class="mt-3 border-bottom"
    >
      Documentation
    </h5>
     
    <aquifer-documents-stub
      editmode="true"
      files="[object Object]"
    />
     
    <!---->
  </div>
</div>
`;

exports[`View Component View mode matches the snapshot 1`] = `
<div
  class="card p-3 mb-4"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
   
  <div
    class="container"
  >
    <!---->
     
    <div
      class="row border-bottom mb-3 pb-2"
    >
      <div
        class="col"
      >
        <h4>
          Aquifer 4 Summary - Edit
        </h4>
      </div>
    </div>
     
    <!---->
     
    <div
      class="container"
    >
      <div
        class="row"
      >
        <div
          class="col-md-6"
        >
          <div
            class="row"
          >
            <div
              class="aquifer-id col-form-label col-md-4"
            >
              
          Aquifer number
        
            </div>
             
            <div
              class="aquifer-id col-md-8"
            >
              
          4
        
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__12__BV_label_"
            class="b-form-group form-group"
            id="__BVID__12"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="aquifer_name"
                id="__BVID__12__BV_label_"
              >
                Aquifer name
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-name"
                  tabindex="1"
                  type="text"
                  value="Aggasiz"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__14__BV_label_"
            class="b-form-group form-group"
            id="__BVID__14"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="location_description"
                id="__BVID__14__BV_label_"
              >
                Descriptive location
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-location-description"
                  tabindex="3"
                  type="text"
                  value="Aggasiz/Sea Bird Island"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__16__BV_label_"
            class="b-form-group form-group"
            id="__BVID__16"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="material"
                id="__BVID__16__BV_label_"
              >
                Material type
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-material"
                  tabindex="5"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__18__BV_label_"
            class="b-form-group form-group"
            id="__BVID__18"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="quality_concern"
                id="__BVID__18__BV_label_"
              >
                Quality concerns
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-quality-concern"
                  tabindex="7"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__20__BV_label_"
            class="b-form-group form-group"
            id="__BVID__20"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="area"
                id="__BVID__20__BV_label_"
              >
                Size (km²)
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-area"
                  tabindex="9"
                  type="text"
                  value="63.3"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__22__BV_label_"
            class="b-form-group form-group"
            id="__BVID__22"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="known_water_use"
                id="__BVID__22__BV_label_"
              >
                Type of known water use
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-known-water-use"
                  tabindex="11"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__24__BV_label_"
            class="b-form-group form-group"
            id="__BVID__24"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="notes"
                id="__BVID__24__BV_label_"
              >
                Comments
              </label>
              <div
                class="col-sm-8"
              >
                <textarea
                  class="form-control"
                  id="aquifer-notes"
                  rows="4"
                  tabindex="13"
                  wrap="soft"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <fieldset
            aria-labelledby="__BVID__26__BV_label_"
            class="b-form-group form-group"
            id="__BVID__26"
            role="group"
          >
            <div
              class="form-row"
            >
              <legend
                class="col-sm-4 col-form-label"
                id="__BVID__26__BV_label_"
              >
                Documents
              </legend>
              <div
                aria-labelledby="__BVID__26__BV_label_"
                class="col-sm-8"
                role="group"
              >
                <input
                  class="form-control-file"
                  id="__BVID__27"
                  multiple="multiple"
                  type="file"
                />
                 
                <div
                  class="mt-3"
                >
                  <div
                    class="custom-control custom-checkbox custom-control-inline"
                  >
                    <input
                      autocomplete="off"
                      class="custom-control-input"
                      id="isPrivateCheckbox"
                      true-value="true"
                      type="checkbox"
                      value="true"
                    />
                    <label
                      class="custom-control-label"
                      for="isPrivateCheckbox"
                    >
                      Are these documents private?
                    </label>
                  </div>
                </div>
                 
                <!---->
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </fieldset>
        </div>
         
        <div
          class="col-md-6"
        >
          <div
            aria-labelledby="__BVID__29__BV_label_"
            class="b-form-group form-group"
            id="__BVID__29"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="mapping_year"
                id="__BVID__29__BV_label_"
              >
                Year of mapping
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-mapping-year"
                  tabindex="2"
                  type="text"
                  value="1993"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__31__BV_label_"
            class="b-form-group form-group"
            id="__BVID__31"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="litho_stratographic_unit"
                id="__BVID__31__BV_label_"
              >
                Litho stratigraphic unit
              </label>
              <div
                class="col-sm-8"
              >
                <input
                  class="form-control"
                  id="aquifer-litho-stratigraphic-unit"
                  tabindex="4"
                  type="text"
                  value="Fraser River Sediments"
                />
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__33__BV_label_"
            class="b-form-group form-group"
            id="__BVID__33"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="vulnerability"
                id="__BVID__33__BV_label_"
              >
                Vulnerability
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-vulnerability"
                  tabindex="6"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__35__BV_label_"
            class="b-form-group form-group"
            id="__BVID__35"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="subtype"
                id="__BVID__35__BV_label_"
              >
                Subtype
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-subtype"
                  tabindex="8"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__37__BV_label_"
            class="b-form-group form-group"
            id="__BVID__37"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="productivity"
                id="__BVID__37__BV_label_"
              >
                Productivity
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-productivity"
                  tabindex="10"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
           
          <div
            aria-labelledby="__BVID__39__BV_label_"
            class="b-form-group form-group"
            id="__BVID__39"
            role="group"
          >
            <div
              class="form-row"
            >
              <label
                class="col-sm-4 col-form-label"
                for="demand"
                id="__BVID__39__BV_label_"
              >
                Demand
              </label>
              <div
                class="col-sm-8"
              >
                <select
                  class="form-control custom-select"
                  id="aquifer-demand"
                  tabindex="12"
                >
                  <option
                    value=""
                  />
                </select>
                <!---->
                <!---->
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <div
        class="row mt-4"
      >
        <div
          class="col-auto"
        >
          <button
            class="btn btn-primary"
            type="button"
          >
            
        Save
      
          </button>
           
          <button
            class="btn btn-default"
            type="button"
          >
            
        Cancel
      
          </button>
        </div>
      </div>
       
      <div>
        <div
          id="confirmSave___BV_modal_outer_"
        >
          <div
            aria-hidden="true"
            class="modal fade"
            id="confirmSave"
            role="dialog"
            style="display: none;"
          >
            <div
              class="modal-dialog modal-md"
            >
              <div
                aria-describedby="confirmSave___BV_modal_body_"
                aria-labelledby="confirmSave___BV_modal_header_"
                class="modal-content"
                role="document"
                tabindex="-1"
              >
                <header
                  class="modal-header"
                  id="confirmSave___BV_modal_header_"
                >
                  <h5
                    class="modal-title"
                  />
                  <button
                    aria-label="Close"
                    class="close"
                    type="button"
                  >
                    ×
                  </button>
                </header>
                <div
                  class="modal-body"
                  id="confirmSave___BV_modal_body_"
                >
                  <p>
                    Are you sure you would like to save this record?
                  </p>
                </div>
                <footer
                  class="modal-footer"
                  id="confirmSave___BV_modal_footer_"
                >
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    OK
                  </button>
                </footer>
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
       
      <div>
        <div
          id="confirmCancel___BV_modal_outer_"
        >
          <div
            aria-hidden="true"
            class="modal fade"
            id="confirmCancel"
            role="dialog"
            style="display: none;"
          >
            <div
              class="modal-dialog modal-md"
            >
              <div
                aria-describedby="confirmCancel___BV_modal_body_"
                aria-labelledby="confirmCancel___BV_modal_header_"
                class="modal-content"
                role="document"
                tabindex="-1"
              >
                <header
                  class="modal-header"
                  id="confirmCancel___BV_modal_header_"
                >
                  <h5
                    class="modal-title"
                  />
                  <button
                    aria-label="Close"
                    class="close"
                    type="button"
                  >
                    ×
                  </button>
                </header>
                <div
                  class="modal-body"
                  id="confirmCancel___BV_modal_body_"
                >
                  <p>
                    Are you sure you want to quit editing this record?
                  </p>
                </div>
                <footer
                  class="modal-footer"
                  id="confirmCancel___BV_modal_footer_"
                >
                  <button
                    class="btn btn-default"
                    type="button"
                  >
                    Cancel
                  </button>
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                    OK
                  </button>
                </footer>
              </div>
            </div>
          </div>
          <!---->
        </div>
      </div>
    </div>
     
    <!---->
     
    <h5
      class="mt-3 border-bottom"
    >
      Documentation
    </h5>
     
    <aquifer-documents-stub
      editmode="true"
      files="[object Object]"
    />
     
    <!---->
  </div>
</div>
`;
